--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
+    "helmet": "^5.0.2",
     "nodemon": "^2.0.15"
   },
   "scripts": {
