--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
+    "mongoose": "^6.2.10",
     "nodemon": "^2.0.15"
   },
   "scripts": {
