--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
-    "mongoose": "^6.2.10",
+    "mongoose": "5.13.14",
     "nodemon": "^2.0.15"
   },
   "scripts": {
-    "development": "nodemon"
+    "dev": "nodemon"
   }
 }
